[metadata]
# replace with your username:
name = BL_Python
version = attr: BL_Python.__version__
author = 'Aaron Holmes'
author_email = 'aholmes@mednet.ucla.edu'
description = 'Python libraries for use in Boutros Lab'
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10

install_requires =

[options.packages.find]
where = .