[build-system]

requires = [
    "setuptools>=42",
    "wheel"
]

build-backend = "setuptools.build_meta"

[project]
name = "BL_Python.database"
requires-python = ">=3.10"
authors = [
    {name = 'Aaron Holmes', email = 'aholmes@mednet.ucla.edu'}
]
description = 'Libraries for working with databases in Boutros Lab.'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent"
]

dependencies = [
    "sqlalchemy ~= 1.4",
    "alembic ~= 1.8",
    "sqlalchemy2-stubs ~= 0.0.2a34"
]

dynamic = ["version", "readme"]
[tool.setuptools.dynamic]
version = {attr = ".__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.package-dir]
"BL_Python.database" = "."

[tool.setuptools]
packages = ["BL_Python.database"]

[project.optional-dependencies]
postgres = [
    "psycopg2 ~= 2.9"
]

postgres-binary = [
    "psycopg2-binary ~= 2.9"
]