[build-system]

requires = [
    "setuptools>=42",
    "wheel"
]

build-backend = "setuptools.build_meta"

[project]
name = "BL_Python.database"
requires-python = ">=3.10"
authors = [
    {name = 'Aaron Holmes', email = 'aholmes@mednet.ucla.edu'}
]
description = 'Libraries for working with databases in Boutros Lab.'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Natural Language :: English"
]

dependencies = [
    "BL_Python.programming",

    "sqlalchemy ~= 1.4",
    "alembic ~= 1.8",
    "sqlalchemy2-stubs ~= 0.0.2a34",
    "injector",
    "pydantic"
]

dynamic = ["version", "readme"]
[tool.setuptools.dynamic]
version = {attr = "BL_Python.database.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[project.urls]
"Homepage" = "https://github.com/uclahs-cds/BL_Python"
"Bug Tracker" = "https://github.com/uclahs-cds/BL_Python/issues"
"Repository" = "https://github.com/uclahs-cds/BL_Python.git"
"Changelog" = "https://github.com/uclahs-cds/BL_Python/blob/main/CHANGELOG.md"

[tool.setuptools.package-dir]
"BL_Python.database" = "BL_Python/database"

[tool.setuptools.packages.find]
exclude = ["build*"]

[tool.setuptools.package-data]
"BL_Python.database" = ["py.typed"]

[project.optional-dependencies]
postgres = [
    "psycopg2 ~= 2.9"
]

postgres-binary = [
    "psycopg2-binary ~= 2.9"
]
